--- a/index.html
+++ b/index.html
@@ -2,30 +2,61 @@
 <html>
 	<head lang="en">
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="css/style.css">
-    	<title>Neighborhood Map</title>
+		<title>Neighborhood Map</title>
 	</head>
 	<body>
+		<div class="container">
+		  <div class="row">
+			<div class="col-sm-4">
+				
+				<div class ="row">
+					<input type="text" name="search" placeholder="Search..">
+				</div>
 
-	    <div id="appcontent">
-	        <div id="map"></div>
-		    <script>
-		    var map;
-		    function initMap() {
-		    	map = new google.maps.Map(document.getElementById('map'), {
-		        center: {lat: -34.397, lng: 150.644},
-		        zoom: 8
-		    	});
-		 	}
-	    	</script>
+				<div class="row">
+					<ul>
+						<li>
+							<p>list stuff</p>
+						</li>
+					</ul>
+				</div>
 
-	    </div>
-	    <script async defer
-	    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkABM9uNs6ZCsYcJUj4aMjQIyvSE3S9k4&callback=initMap">
-	    </script>
+			</div>
 
 
+			<div class="col-sm-8">
+				<div id="map"></div>
+				<script>
+				  var map;
+				  function initMap() {
+					map = new google.maps.Map(document.getElementById('map'), {
+					  center: {lat: -34.397, lng: 150.644},
+					  zoom: 8
+					});
+				}
+				</script>
+			</div>
+		  </div>
+
+
+		</div>
+
+
+
+		
+		<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+		</script>
+		<script async defer
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkABM9uNs6ZCsYcJUj4aMjQIyvSE3S9k4&callback=initMap">
+		</script>
+
+		
 		<script src="js/knockout-3.4.1.js"></script>
-	    <script src="js/app.js"></script>
+		<script src="js/app.js"></script>
 	</body>
 </html>
