--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="css/style.css">
 		<title>Neighborhood Map</title>
+
 	</head>
 	<body>
 		<div class="container">
 		  <div class="row">
-			<div class="col-sm-4">
+			<div class="col-sm-2">
 				
 				<div class ="row">
 					<input type="text" name="search" placeholder="Search..">
@@ -29,22 +30,28 @@
 			</div>
 
 
-			<div class="col-sm-8">
+			<div class="col-sm-10">
 				<div id="map"></div>
-				<script>
-				  var map;
-				  function initMap() {
-					map = new google.maps.Map(document.getElementById('map'), {
-					  center: {lat: -34.397, lng: 150.644},
-					  zoom: 8
-					});
-				}
-				</script>
+			    <script>
+			      function initMap() {
+			        var uluru = {lat: -25.363, lng: 131.044};
+			        var map = new google.maps.Map(document.getElementById('map'), {
+			          zoom: 4,
+			          center: uluru
+			        });
+			        var marker = new google.maps.Marker({
+			          position: uluru,
+			          map: map
+			        });
+			      }
+			    </script>
 			</div>
+			
 		  </div>
 
 
 		</div>
+
 
 
 
