--- a/index.html
+++ b/index.html
@@ -33,17 +33,35 @@
 			<div class="col-sm-10">
 				<div id="map"></div>
 			    <script>
-			      function initMap() {
-			        var uluru = {lat: -25.363, lng: 131.044};
-			        var map = new google.maps.Map(document.getElementById('map'), {
-			          zoom: 4,
-			          center: uluru
-			        });
-			        var marker = new google.maps.Marker({
-			          position: uluru,
-			          map: map
-			        });
-			      }
+			    function initMap() {
+
+        		var map = new google.maps.Map(document.getElementById('map'), {
+          			zoom: 15,
+          			center: {lat: 44.636, lng: -124.053}
+       			});
+
+		        // Create an array of alphabetical characters used to label the markers.
+		        var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+
+		        // Add some markers to the map.
+		        // Note: The code uses the JavaScript Array.prototype.map() method to
+		        // create an array of markers based on a given "locations" array.
+		        // The map() method here has nothing to do with the Google Maps API.
+		        var markers = locations.map(function(location, i) {
+		          return new google.maps.Marker({
+		            position: location,
+		            label: labels[i % labels.length]
+		          });
+		        });
+
+		        // Add a marker clusterer to manage the markers.
+		        var markerCluster = new MarkerClusterer(map, markers,
+		            {imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m'});
+      			}
+			      var locations = [
+			        {lat:44.63731107, lng: -124.05294478},
+			        {lat:44.63726527, lng:-124.05372798}
+			      ]
 			    </script>
 			</div>
 			
@@ -55,7 +73,8 @@
 
 
 
-		
+		<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+
 		<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
 		</script>
 		<script async defer
