--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 		<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
 		</script>
 
-
+		<script async defer
+	    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlxxJJ0hVkjcyNUYihvzHkxjptcUl87jY&callback=initMap">
+	    </script>
 		
 		<script src="js/knockout-3.4.1.js"></script>
 		<script src="js/app.js"></script>
