--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<div class="row">
 					<ul data-bind="foreach: filteredList">
 						<li>
-							<p data-bind="text: name"></p>
+							<p data-bind="text: name, click: bounce"></p>
 						</li>
 					</ul>
 				</div>
