--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 				<div class="row" id = 'articles'>
 					<h3 id="nytimes-header">News Articles</h3>
-        			<ul id="nytimes-articles" class="article-list" data-bind="text: $(parent).articleTerm"> </ul>
+        			<ul id="nytimes-articles" class="article-list"> </ul>
 				</div>
 
 			</div>
