--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
 		</script>
 
-		<script async defer
+		<script async defer onerror="alert('NOT loaded')"
 	    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlxxJJ0hVkjcyNUYihvzHkxjptcUl87jY&callback=initMap">
 	    </script>
 		
