--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 				<div class="row" id = 'articles'>
 					<h3 id="nytimes-header">News Articles</h3>
-        			<ul data-bind="foreach: filteredArticles">
+        			<ul data-bind="foreach: myArticles">
         				<li>
         					<p data-bind="text: headline.main"></p>
         					<a href data-bind="text: web_url"></a>
