--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		
 		<link rel="stylesheet" href="css/style.css">
 		<title>Neighborhood Map</title>
 
 	</head>
+
 	<body>
 
 		<div class="container" id = "container">
 		  <div class="row">
+			<aside>
 			<div class="col-sm-2">
 				
 				<div class ="row">
@@ -29,17 +30,17 @@
 				</div>
 
 				<div class="row" id = 'articles'>
-					<h3 id="nytimes-header">News Articles</h3>
+					<h3>News articles about <strong data-bind="text: display"></strong></h3>
         			<ul data-bind="foreach: myArticles">
         				<li>
         					<p data-bind="text: headline.main"></p>
-        					<a href data-bind="text: web_url"></a>
+        					<a href data-bind="attr: {href: web_url}">link </a>
         				</li>
         			</ul>
 				</div>
 
 			</div>
-
+			</aside>
 
 			<div class="col-sm-10">
 				<div id="map"></div>
@@ -53,15 +54,18 @@
 
 
 
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-		<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
-		</script>
 
-		<script async defer onerror="alert('NOT loaded')"
-	    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlxxJJ0hVkjcyNUYihvzHkxjptcUl87jY&callback=initMap">
-	    </script>
+
 		
 		<script src="js/knockout-3.4.1.js"></script>
 		<script src="js/app.js"></script>
+		<script async defer onerror="alert('NOT loaded')"
+	    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlxxJJ0hVkjcyNUYihvzHkxjptcUl87jY&callback=initMap">
+	    </script>
+		<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+		</script>
 	</body>
 </html>
